OCP-Infrastructure/resources/amq/mqtt-route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: amq
  name: amq
spec:
  port:
    targetPort: 8883-tcp
  tls:
    termination: passthrough
  to:
    kind: Service
    name: amq
    weight: 100
  wildcardPolicy: None
